# gpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt  context.json  gpp.out
.github/workflows/: compile_and_test.yml
cmake/modules/: gpp_deps.cmake
examples/: a.html  arrow_function.html  block-child.html  block.html  block_child.html  cat.html  cate.html  child.html  context.html  get.html  group.html  groups2.html  hello.gpp  hello.html  keys.html  main.html  map-context.html  map.html  mix.html  mixed_languages.html  number.html  parent.html  plain.html  random.html  simple.html  sort.html  sort2.html  test.html  use_utils.html  utils.html  with_python.html
extlib/: tests
include/gpp/: AST.h  AST_utils.h  builtins.h  env.h  gpp.h  io.h  json.h  macros.h  main.h  parser.h  utils.h  visitor.h
src/: AST.c  AST_utils.c  builtins.c  escape.c  gpp.c  io.c  json.c  lexer.c  main.c  parser.c  token.c  utils.c  visitor.c
src/include/: AST.h  AST_utils.h  builtins.h  escape.h  gpp.h  io.h  json.h  lexer.h  main.h  parser.h  token.h  utils.h  visitor.h
tests/: CMakeLists.txt  Makefile  context.json
tests/inputs/: escape.html  hello-world.html  join.html  load.html  map-context.html
tests/src/: main.c  test_inputs.c
tests/src/include/: test_inputs.h  utils.h
